# suika

./: Cargo.toml  LICENSE-MIT  README.md
src/: fruit.rs  main.rs
