[package]
name = "suika"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.4.1"
bevy = { version = "0.17.2" }
rand = "0.9.2"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
